2017-09-08  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): Fixed CVE-2017-8350 crash while
	reading a malformed JNG file (again).

2017-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/error.c (ThrowLoggedException): Capture the first
	exception at ErrorException level or greater, or only capture
	exception if it is more severe than an already reported exception.
	This should help lead to better error reports since the first
	error is usually the most significant.

	* coders/png.c (ReadJNGImage): Add "improper header" exception
	reporting.

2017-09-01  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): Fixed CVE-2017-8350 crash while
	reading a malformed JNG file.

2017-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Patch submitted by Petr Gajdos to
	check that .Width and .Height are greater than zero before they
	are assigned to image->columns and image->rows respectively
	(CVE-2014-9815).
	(ReadWPGImage): Do more validations on WPG_Palette.StartIndex and
	WPG_Palette.NumOfEntries.

2017-08-29  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Fix for SourceForge issue #440
	"use-after-free in CloseBlob (blob.c) (INCOMPLETE FIX FOR
	CVE-2017-11403)" and SourceForge issue #438 "heap use after free
	in CloseBlob".
	* coders/png.c (ReadOneJNGImage): Fix for SourceForge issue #439
	"assertion failure in magick/pixel_cache.c"

2017-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mpeg.c (WriteMPEGImage): Fix MPEG writer memory leak.
	Only the first image in the coalesce image list was being freed.
	Problem was reported by LCatro via email on July 15, 2017.

	* magick/attribute.c (TracePSClippingPath, TraceSVGClippingPath):
	Fix SourceForge bug #447 "Heap out of bounds read in
	ReadMSBShort()".

2017-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
