@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170901"
-#define public MagickPackageReleaseDate "snapshot-20170901"
+#define public MagickPackageVersionAddendum ".020170909"
+#define public MagickPackageReleaseDate "snapshot-20170909"
