@@ -35,6 +35,21 @@
 <div class="document">
 
 
+<p>2017-09-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/{html.c, map.c, plasma.c, png.c, psd.c, rle.c, stegano.c,
+uil.c}: Downgrade claimed coder stability level for HTML, SHTML,
+MAP, FRACTAL, PLASMA, JNG, MNG, RLE, STEGANO, and UIL formats.</li>
+</ul>
+</blockquote>
+<p>2017-09-08  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/png.c (ReadJNGImage): Fixed CVE-2017-8350 crash while
+reading a malformed JNG file (again).</li>
+</ul>
+</blockquote>
 <p>2017-09-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
